Fix the prop descriptions getting too big

--- a/site/style.styl
+++ b/site/style.styl
@@ -658,8 +658,6 @@ article {
     }
 
     .prop-implementation {
-        max-width: 400px;
-
         h5 {
             font-size: 10px;
             font-weight: 400;
@@ -669,6 +667,14 @@ article {
 
         h5:first-of-type {
             margin-top: 0;
+        }
+    }
+
+    .prop-description {
+        max-width: 33vw;
+
+        table td {
+            padding-right: 1rem;
         }
     }
 }
